--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{json}": [
+    "*.json": [
       "prettier --write"
     ]
   },
