--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   },
   "main": "lib/CoffeeScriptTransformer.js",
   "source": "src/CoffeeScriptTransformer.ts",
+  "files": [
+    "lib",
+    "src"
+  ],
   "engines": {
     "node": ">= 12.0.0",
     "parcel": "^2.2.0"
