--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["./src/CoffeeScriptTransformer.ts", "./coffeescript.d.ts", "./parcel-utils.d.ts"]
+  "include": ["./src/*.ts"]
 }
